--- a/wedding/Gemfile
+++ b/wedding/Gemfile
@@ -29,6 +29,9 @@ gem 'jbuilder', '~> 1.2'
 
 gem 'devise'
 
+gem "paperclip", :git => "git://github.com/thoughtbot/paperclip.git"
+
+
 
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
