--- a/wedding/Gemfile
+++ b/wedding/Gemfile
@@ -31,7 +31,7 @@ gem 'devise'
 
 gem "paperclip", :git => "git://github.com/thoughtbot/paperclip.git"
 
-
+gem 'carrierwave'
 
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
