--- a/wedding/Gemfile
+++ b/wedding/Gemfile
@@ -29,7 +29,9 @@ gem 'jbuilder', '~> 1.2'
 
 gem 'devise'
 
-gem "paperclip", :git => "git://github.com/thoughtbot/paperclip.git"
+gem "paperclip", '~> 3.4.1'
+
+gem "cocaine", '~> 0.5.1'
 
 gem 'carrierwave'
 
