--- a/wedding/Gemfile
+++ b/wedding/Gemfile
@@ -33,6 +33,7 @@ gem "paperclip", :git => "git://github.com/thoughtbot/paperclip.git"
 
 gem 'carrierwave'
 
+gem 'rake' , '10.3.1'
 group :doc do
   # bundle exec rake doc:rails generates the API under doc/api.
   gem 'sdoc', require: false
